# turbfpe

./: .gitignore  README.md  pyproject.toml
analysis_example/: Renner_params.toml  analysis.py  params_Renner.toml
turbfpe/extra_utils/: low_pass_filter_data.py
turbfpe/part0_preanalysis/: preanalysis.py  preanalysis_functions.py
turbfpe/part1_turbulence_analysis/: turbulence_analysis.py  turbulence_analysis_functions.py
turbfpe/part2_markov/: conditional_moments_estimation.py  km_coeffs_estimation.py  km_coeffs_estimation_stp_opti.py  km_coeffs_fit.py  markov.py  markov_auxiliar_functions.py  markov_auxiliary_functions.py  markov_functions.py  plot_km_coeffs.py  wilcoxon_test.py
turbfpe/part3_entropy/: entropy.py  entropy_computation.py  ift_and_dft_optimizations.py  ift_optimization.py  plot_functions.py
turbfpe/utils/: general.py  logger_setup.py  mpl_utils.py  parameters_utils.py  storing_clases.py  storing_classes.py
